--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
@@ -46,6 +47,8 @@
     "antd": "^4.0.3",
     "babel-plugin-import": "^1.13.0",
     "bundle-loader": "^0.5.6",
+    "component-library-hyx": "^1.0.2",
+    "npm-react-dom": "^1.0.8",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router": "^5.1.2",
