--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,8 @@
 {
   "presets": ["@babel/preset-env", "@babel/preset-react"],
-  "plugins": ["@babel/plugin-proposal-export-default-from",["import", {
+  "plugins": ["@babel/plugin-proposal-export-default-from","@babel/plugin-proposal-class-properties",["import", {
     "libraryName": "antd",
     "libraryDirectory": "es",
     "style": "css" // `style: true` 会加载 less 文件
-  }]]
+  }],]
 }
