--- a/package.json
+++ b/package.json
@@ -48,12 +48,14 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@antv/g6": "^3.5.10",
     "@babel/plugin-proposal-class-properties": "^7.10.1",
     "antd": "^4.0.3",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
     "bundle-loader": "^0.5.6",
     "component-library-hyx": "^1.0.11",
+    "echarts": "^4.8.0",
     "npm-react-dom": "^1.0.8",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
