--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,31 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-react"],
-  "plugins": ["@babel/plugin-proposal-export-default-from","@babel/plugin-proposal-class-properties",["import", {
-    "libraryName": "antd",
-    "libraryDirectory": "es",
-    "style": "css" // `style: true` 会加载 less 文件
-  }],]
+  "presets": [
+    "@babel/preset-env",
+    [
+      "@babel/preset-react",
+      {
+        "useBuiltIns": "usage",
+        "corejs": 2
+      }
+    ]
+  ], // '@babel/preset-env' 是 ‘plugins’的集合
+  "plugins": [
+    "@babel/plugin-proposal-export-default-from",
+    "@babel/plugin-proposal-class-properties",
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "corejs": 2, // polyfill 需要使用@babel/runtime-corejs2
+        "useBuildIns": "usage" //按需引入,即使用什么新特性打包什么新特性, 可以减小打包的体积
+      }
+    ],
+    [
+      "import",
+      {
+        "libraryName": "antd",
+        "libraryDirectory": "es",
+        "style": "true" // `style: true` 会加载 less 文件
+      }
+    ]
+  ]
 }
