--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   "dependencies": {
     "@antv/g6": "^3.5.10",
     "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "add-asset-html-webpack-plugin": "^3.1.3",
     "antd": "^4.0.3",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
