--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
     "css-loader": "^3.4.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^6.0.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-clean": "^0.4.0",
+    "gulp-ruby-sass": "^4.0.0",
+    "gulp-uglify": "^3.0.2",
     "happypack": "^5.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
@@ -68,6 +73,9 @@
     "bundle-loader": "^0.5.6",
     "component-library-hyx": "^1.0.11",
     "echarts": "^4.8.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-load-plugins": "^2.0.6",
+    "gulp-sass": "^4.1.0",
     "npm-react-dom": "^1.0.8",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
